--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "io-functions-template",
+  "name": "pagopa-functions-rtmanager",
   "description": "",
   "author": "IO team",
-  "repository": "https://github.com/pagoPA/io-functions-template",
+  "repository": "https://github.com/pagoPA/pagopa-functions-rtmanage",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
@@ -25,9 +25,9 @@
   "devDependencies": {
     "@azure/functions": "^1.0.3",
     "@types/documentdb": "^1.10.5",
-    "@types/node": "10.14.1",
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.15",
+    "@types/node": "10.14.1",
     "@types/vfile-message": "^2.0.0",
     "@types/xmldom": "^0.1.29",
     "danger": "^8.0.0",
@@ -47,6 +47,7 @@
     "typescript": "^3.7.0"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.1.1",
     "documentdb": "^1.15.3",
     "durable-functions": "^1.2.4",
     "express": "^4.15.3",
