--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:coverage": "jest --coverage",
     "lint": "tslint -p .",
     "lint-api": "oval validate -p openapi/index.yaml",
-    "dist:modules": "modclean -r -n default:safe && npm prune --production",
+    "dist:modules": "modclean -r -n default:safe && yarn install --production",
     "dist:zip": "zip -r dist.zip . --exclude @.funcignore --exclude .funcignore",
     "predeploy": "npm-run-all generate build dist:*",
     "generate:definitions": "shx rm -rf ./generated/definitions && mkdir -p ./generated/definitions && gen-api-models --api-spec ./openapi/index.yaml --out-dir ./generated/definitions",
@@ -55,7 +55,7 @@
     "io-functions-commons": "^9.0.0",
     "io-functions-express": "^0.1.0",
     "io-ts": "1.8.5",
-    "italia-ts-commons": "^5.1.11",
+    "italia-ts-commons": "^8.0.0",
     "winston": "^3.2.1",
     "xmldom": "^0.3.0"
   },
