--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "generate": "npm-run-all generate:*"
   },
   "devDependencies": {
-    "@azure/functions": "^1.0.3",
+    "@azure/functions": "^1.2.0",
     "@types/documentdb": "^1.10.5",
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.15",
     "@types/node": "10.14.1",
+    "@types/nodemailer": "^6.4.0",
     "@types/vfile-message": "^2.0.0",
     "@types/xmldom": "^0.1.29",
     "danger": "^8.0.0",
@@ -49,13 +50,15 @@
   "dependencies": {
     "@azure/storage-blob": "^12.1.1",
     "documentdb": "^1.15.3",
-    "durable-functions": "^1.2.4",
+    "durable-functions": "^1.2.2",
     "express": "^4.15.3",
     "fp-ts": "1.17.0",
     "io-functions-commons": "^9.0.0",
     "io-functions-express": "^0.1.0",
     "io-ts": "1.8.5",
     "italia-ts-commons": "^8.0.0",
+    "nodemailer": "^6.4.6",
+    "nodemailer-sendgrid": "^1.0.3",
     "winston": "^3.2.1",
     "xmldom": "^0.3.0"
   },
